About Me page edits

--- a/about.html
+++ b/about.html
@@ -8,6 +8,36 @@
     <title>Document</title>
 </head>
 <body>
-    blah meow
+    <nav>
+        <h4 class="navigation">Home</h4>
+        <h4 class="navigation">Products</h4>
+        <h4 class="navigation">About Us</h4>
+    </nav>
+    <div class="rectangle">
+        <h3>Zuhur Abdi</h3>
+        <img src="" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. </p>
+    </div>
+    <div class="rectangle">
+        <h3>Yiyeon Brown</h3>
+        <img src="" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. </p>
+    </div>
+    <div class="rectangle">
+        <h3>Delijhia Brown</h3>
+        <img src="" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. </p>
+    </div>
+    <div class="rectangle">
+        <h3>Mahelet Gobebo</h3>
+        <img src="" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. </p>
+    </div>
+    <div class="rectangle">
+        <h3>Giselle Martinez-Perez</h3>
+        <img src="" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. </p>
+    </div>
+
 </body>
 </html>
